--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -1,5 +1,5 @@
-<template name="register">
-	  <article>
+<template name ="register">
+	  <article dir="{{getDirection}}">
 	        <section class="img-bg-register">
 	        	<div class="wrapper">
 	                <div class="row">
@@ -21,28 +21,28 @@
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">{{_ "First name"}}</label>
 	                                <div class="controls">
-	                                    <input class="short" type="text" id="fname" placeholder="">
+	                                    <input class="text" type="text" id="fname" placeholder="">
 	                                </div>
 	                                <p class="error_firstname" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">{{_ "Last name"}}</label>
 	                                <div class="controls">
-	                                    <input class="short" type="text" id="lname" placeholder="">
+	                                    <input class="text" type="text" id="lname" placeholder="">
 	                                </div>
 	                                <p class="error_lastname" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">{{_ "City"}}</label>
 	                                <div class="controls">
-	                                    <input class="short" type="text" id="pays" placeholder="">
+	                                    <input class="text" type="text" id="pays" placeholder="">
 	                                </div>
 	                                <p class="error_pays" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">{{_ "Ville"}}</label>
 	                                <div class="controls">
-	                                    <input class="short" type="text" id="ville" placeholder="">
+	                                    <input class="text" type="text" id="ville" placeholder="">
 	                                </div>
 	                                <p class="error_ville" style="margin-top:10px;color:red"></p>
 	                            </div>
