--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -12,6 +12,11 @@
                 </div>
                 <div id="header-right">
                     <a href="#" id="a-sidebar">REFINE</a>
+                    <div class="header_top_right pull-left">
+                        <ul class="nav nav-pills">
+                            <li><a href="#" id="en" style="background: none !important;">{{changeLanguage}}</a></li>
+                        </ul>
+                    </div>
                 </div>
             </section> <!-- #header -->
             <section id="refine_menu">
