--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,5 +1,5 @@
 <template name="details">
-    <article>
+    <article dir="{{getDirection}}">
     <section class="shadow_bottom">
         <div class="wrapper">
             <div class="row">
