--- a/client/Views/App/profile/member.html
+++ b/client/Views/App/profile/member.html
@@ -1,4 +1,4 @@
-<template name="member">
+<template name="member123">
 	<section id="profile_black_men">
 		<div class="container">
 			<div class="row">
