--- a/client/Views/App/login/login.html
+++ b/client/Views/App/login/login.html
@@ -3,7 +3,7 @@
         <section class="img-bg-login">
         	<div class="wrapper">
                 <div class="row">
-                    <div class="form-login">
+                    <div class="form-login" dir="{{getDirection}}">
                         <div class="text-center">
                             <a href="/login"><button class="button-log" id="loginTop">{{_ "Login"}}</button></a>
                             <strong class="joiner">{{_ "Or"}}</strong>
