--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -18,16 +18,16 @@
 	                <ul id="submenu-1">
 	                    <li>
 	                        <a href="/profile">
-	                            <span class="menu-li-title">My Profile</span>
+	                            <span class="menu-li-title left-menu">My Profile</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/member">
-	                            <span class="menu-li-title">Member profile</span>
+	                            <span class="menu-li-title left-menu">Member profile</span>
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="/profile1">
+	                        <a href="/member">
 	                            <span class="menu-li-title left-menu">Member profile</span>
 	                        </a>
 	                    </li>
@@ -55,7 +55,7 @@
 		<ul>
 			<li class="icon info">
 				<a href="/favorite">
-					<span class="menu-li-title">FAVORITE</span>
+					<span class="menu-li-title left-menu">FAVORITE</span>
 				</a>
 			</li>
 			<li class="icon info">
