--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,8 +252,8 @@ table.contact
 	padding: 6px 12px;
 	margin-bottom: 0px;
 	cursor: pointer;
-	background: #eb866a;
-	color: #fff;
+	/*background: #eb866a;
+	color: #fff;*/
 }
 
 .container
