--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,5 +1,5 @@
 <template name="details">
-    <article dir="{{getDirection}}">
+    <article>
     <section class="shadow_bottom">
         <div class="wrapper">
             <div class="row">
@@ -29,28 +29,6 @@
                                 <!-- </span> -->
                           </div>
                           <div class="col-sm-12">
-                            <ul class="nav nav-pills nav-justified">
-                              <li>        
-                               <button class="col-xs-5 btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
-                              </li>
-                              <li>        
-                               <div class="form-group col-xs-3">
-                                <select class="form-control" id="qty">
-                               <option>1</option>
-                               <option>2</option>
-                               <option>3</option>
-                               <option>4</option>
-                               <option>5</option>
-                               <option>6</option>
-                                </select>
-                              </div>
-                              </li> 
-                              <li>
-                               <h2 class="col-xs-4 text-center price">{{selected_price}} تومان</h2>
-                              </li>                
-                             </ul>
-                          </div>
-                         <!--  <div class="col-sm-12">
                             <div class="form-group pull-left" >
                               <select id="qty" style="-webkit-appearance:menulist;">
                                 <option>1</option>
@@ -62,7 +40,7 @@
                             </div>
                             <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
                             <h2 class="pull-right">{{selected_price}} تومان</h2>
-                          </div> -->
+                          </div>
                         </div>
 
                         <div class="row">
