--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -29,106 +29,16 @@
                                 <!-- </span> -->
                           </div>
                           <div class="col-sm-12">
-                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
-                            <h2 class="pull-right">{{selected_price}} تومان</h2>
-                          </div>
-                        </div>
-
-                        <div class="row">
-                         <div class="col-sm-12">
-                           <div class="well-deatail">
-                                <p class="text-center text-detail">{{{description}}}</p>
+                            <div class="form-group pull-left" >
+                              <select id="qty" style="-webkit-appearance:menulist;">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                              </select>
                             </div>
-                         </div>
-                        </div>
-                    </div>
-                   </section>
-                   <section class="shadow_bottom">
-                    <div class="wrapper">
-                        <!-- <div class="row">
-                           <div class="pull-right">
-                               <img src="img/filter-img.png" class="img-responsive space-top-img1">
-                           </div>
-                           <div class="col-sm-12">
-                              <div class="col-md-6 pull-left space-top-detail2">
-                               <img src="img/sm-girl.png" class="img-responsive">
-                              </div>
-                               <div class="col-md-6 pull-left space-top-detail2">
-                                 <h4>Sarah</h4>
-                                 <p class="no-margin">07-20-2015</p>
-                                 <p class="no-margin">11:16</p>
-                              </div>
-                           </div>
-                        </div> -->
-                     {{#if currentUser}}
-                        <div class="col-sm-12">
-                          <div class="space-comment box">
-                             <textarea class="form-control" id="status" name="styled-textarea" onfocus="this.value=''; setbg('#ccc');" onblur="setbg('white')" rows="7">{{_"Write what you want ..."}}</textarea>
-                           </div>
-                           <button class="btn_register pull-right" id="posting">{{_ "SEND"}}</button>
-                        </div>
-                     {{/if}}
-                        <div class="clear-fix"></div>
-                          {{#each getReviews review filterReview removeFilter}}
-                        <div class="row">
-                           <div class="col-sm-12">
-                              <div class="col-sm-5 pull-left space-top-detail2">
-                               <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
-                               <!-- <img src="img/sm-girl.png" class="img-responsive"> -->
-                              </div>
-                               <div class="col-sm-5 pull-left space-top-detail2">
-                                 <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
-                                 <p class="no-margin">{{getDate date}}</p>
-                                 <p class="no-margin">{{getTime date}}</p>
-                              </div>
-                              <div class="col-sm-2 pull-right space-top-detail2">
-                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
-                              </div>
-                              <div class="col-sm-12">
-                                 <p class="pull-left space-top-detail3">{{comment}}</p>
-                                 <div class="pull-left border-detail">   
-                                 </div>
-                              </div>
-                           </div>  
-                        </div>
-                        {{/each}} 
-                        </div>
-                   </section>
-                </article>
-
-</template>
-<template name="details">
-    <article>
-    <section class="shadow_bottom">
-        <div class="wrapper">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h3>{{title}}</h3>
-                </div>
-                {{#each getParentAttr oldId}}
-                    {{#with getParentDetails parent}}
-                    <div class="main_color">
-                        <div>
-                            <p class="toggle">{{name}} :</p>
-                            <div style="display: none;" class="bg-white">
-                              <ul class="list-inline">
-                              {{#each getAllAttributes ../product _id}}
-                                    <li><a href="" ><img src="{{getImg productImage}}" width="70" height="70" id="img_attr"></a></li>
-                                {{/each}}
-                              </ul>
-                            </div>
-                        </div>
-                    </div>
-                 {{/with}}
-                  {{/each}}
-                          <div class="space-top-detail1">
-                              <!-- <img src="img/cream.png" class="img-responsive"> -->
-                              <!-- <span class='zoom' id='ex1'> -->
-                                <img id="hoverZoom" class="img-responsive" src="{{getImgForProduct _id}}" alt="{{title}}"/>
-                                <!-- </span> -->
-                          </div>
-                          <div class="col-sm-12">
-                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
+                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}ffffff</button>
                             <h2 class="pull-right">{{selected_price}} تومان</h2>
                           </div>
                         </div>
