--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -38,7 +38,7 @@
                                 <option>5</option>
                               </select>
                             </div>
-                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}ffffff</button>
+                            <button class="btn_addtocard pull-left" id="addtocart">{{_ "ADD TO CART"}}</button>
                             <h2 class="pull-right">{{selected_price}} تومان</h2>
                           </div>
                         </div>
