--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -1,7 +1,7 @@
 <template name="headermenu">	
 	<section id="menu-wrapper">
 		<div id="menu-search">
-		   	<span class="icon-search search-btn kesearch"><i class="fa fa-search search-font"></i></span>
+			<span><button class="btn kesearch left-menu"><i class="fa fa-search search-font"></i></button></span>
 		   	<input class="input-search" id="textToSearch" type="text" placeholder="{{_"Search for..."}}" />
 		</div>
 		<ul id="menu-lateral" class="menu">
