--- a/public/css/style.css
+++ b/public/css/style.css
@@ -833,7 +833,11 @@ input.input-search[type="text"], textarea {
     border: 2px solid #000;
     margin: 5px 0px 10px;
     padding: 4px 10px;
-    width: 80%;
+    width: 70%;
     border-radius: 20px;
     color: black;
+}
+button.kesearch{
+	background:none;
+	color: #fff;
 }
