--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -20,6 +20,16 @@
 					</div> <!-- col-xs-12 -->
 				{{/with}}
 				{{#if currentUser}}
+					<div class="col-xs-12">
+						<form role="form">
+							<div class="form-group">
+							  <textarea class="form-control" rows="5" id="comment" placeholder="Write what you want here..."></textarea>
+							</div>
+						</form>
+						<a href="" class="pull-right">
+							<span class="span-send" id="addreview">SEND</span>
+						</a>
+					</div> <!-- col-xs-12 -->
 				{{/if}}
 					<div class="clearfix"></div>
 				{{#each getReviewBySort review}}
@@ -37,13 +47,13 @@
 											<p class="time-tuto-send">{{getTime date}}</p>
 										</div>
 									</div>
+									<div class="col-xs-12">
+										<p class="description-tuto-comment">{{comment}}</p>
+										<hr class="tuto-hr-comment">
+									</div> <!-- col-xs-12 -->
 								</div>
 							</div>
 						</div> <!-- hold-tuto -->
-					</div> <!-- col-xs-12 -->
-					<div class="col-xs-12">
-						<p class="description-tuto-comment">{{comment}}</p>
-						<hr class="tuto-hr-comment">
 					</div> <!-- col-xs-12 -->
 				{{/each}}
 					<div class="clearfix"></div>
