--- a/public/css/reward.css
+++ b/public/css/reward.css
@@ -20,6 +20,14 @@
 	/*border:5px solid #000;*/
 }
 
+/*reward style*/
+.div-circle p {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 15px;
+}
+
 
 
 
