--- a/client/Views/App/menu.html
+++ b/client/Views/App/menu.html
@@ -2,14 +2,14 @@
 	<div class="col-xs-12">
         <div class="hold_refine">
             <ul class="refine_menu list-inline">
-            	<li class="active">
-	                <a href="{{pathFor 'listing' id=(slug title)}}" id="makeup"> <i class="fa fa-caret-down"></i></a>
-	            </li>
-	            <li>
-	            	<a href="{{pathFor 'listing' id=(slug title)}}" id="all_makeup">All Makeup <i class="fa fa-caret-down"></i></a>
-	            </li>
+             <li class="active">
+                 <a href="{{pathFor 'listing' id=(slug title)}}"><label id="makeup"></label> <i class="fa fa-caret-down"></i></a>
+             </li>
+             <li>
+              <a href="{{pathFor 'listing' id=(slug title)}}"><label id="all_makeup"></label> <i class="fa fa-caret-down"></i></a>
+             </li>
                 <li>
-                	<a href="{{pathFor 'listing' id=(slug title)}}" id="secondChild">Second</a>
+                 <a href="{{pathFor 'listing' id=(slug title)}}"><label id="secondChild"></label><i class="fa fa-caret-down"></i></a>
                 </li>
             </ul>
             <div id="panel_makeup">
@@ -24,7 +24,7 @@
 	            <div class="row">
 	            	<div class="u-vmenu">
 						<ul>
-							<li><a href="#" id="allCategory"> </a></li>
+							<li><a href="{{pathFor 'listing' id=(slug title)}}" id="allCategory"> </a></li>
 						{{#with getParent}}
 							{{#each getChildren _id}}
 							<li id="child_child">
@@ -41,7 +41,7 @@
 	            <div class="row">
 	            	<div class="u-vmenu">
 						<ul>
-							<li><a href="#" id="allCategory"> </a></li>
+							<li><a href="{{pathFor 'listing' id=(slug title)}}" id="allCategory"> </a></li>
 						{{#with getParent getChildren _id}}
 								{{#each getFirstChild _id}}
 								<li id="second_child">
