getpointprofile and categorywebzine

--- a/client/Views/App/contents/webzine.html
+++ b/client/Views/App/contents/webzine.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-xs-12">
                     <div class="text-right">
-                        <p class="cate-webzine">{{getCatergoryName category}}</p>
+                        <a href="/webzinedetails/{{slug title}}"><p class="cate-webzine">{{getCatergoryName category}}</p></a>
                     </div>
                 </div>
             </div>
