--- a/client/Views/App/contents/webzineDetail.html
+++ b/client/Views/App/contents/webzineDetail.html
@@ -11,7 +11,7 @@
           {{/with}}
           <div class="col-xs-12">
               <div class="text-right">
-                <p class="cate-webzine-detail">Lipsticks</p>
+                <p class="cate-webzine-detail">{{getCatergoryName category}}</p>
               </div>
           </div>
           <div class="text-webzin-mobile-detail">
