--- a/client/Views/App/profile/profile.html
+++ b/client/Views/App/profile/profile.html
@@ -28,7 +28,7 @@
 	            <div class="row">
 	            	{{#with getprofile}}
 					{{profile.image}}
-	            	<table class="table-profile table">
+	            	<table class="table-profile table" dir="{{getDirection}}">
 	                        <tbody>
 	                            <tr>
 	                                <td>{{_"Name"}}</td>
