--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -15,7 +15,7 @@
 	                <a href="#">
 	                    <span class="menu-li-title">Profile</span>
 	                </a>
-	                <ul id="submenu-1">
+	                <ul id="submenu-1" style="display: none;">
 	                    <li>
 	                        <a href="/profile">
 	                            <span class="menu-li-title left-menu">My Profile</span>
