--- a/client/Views/App/home.html
+++ b/client/Views/App/home.html
@@ -1,4 +1,7 @@
 <template name="home">
+    <section id="refine_menu">
+        {{> menu}}
+    </section> <!-- #refine menu -->
    <div class="swiper-container">
     <div class="swiper-wrapper">
         {{#each getbanner}}
