--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,4 +1,7 @@
 <template name="details">
+    <section id="refine_menu">
+        {{> menu}}
+    </section> <!-- #refine menu -->
     <article>
     <section class="shadow_bottom">
         <div class="wrapper">
