--- a/client/Views/App/product/listproducts.html
+++ b/client/Views/App/product/listproducts.html
@@ -1,4 +1,7 @@
 <template name="listproducts">
+    <section id="refine_menu">
+        {{> menu}}
+    </section> <!-- #refine menu -->
     <article>
         <div class="wrapper">
             <p class="text-selling-top">{{nbproducts}}/{{totalProducts}} {{_ "products result"}}</p>
