--- a/client/Views/App/search/searchproduct.html
+++ b/client/Views/App/search/searchproduct.html
@@ -1,4 +1,7 @@
 <template name="searchproduct">
+	<section id="refine_menu">
+        {{> menu}}
+    </section> <!-- #refine menu -->
 {{#if displayproduct}}
 	 <article>
         <div class="wrapper">
