--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -39,7 +39,7 @@
 	                                <p class="error_lastname" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
-	                                <label class="control-label" for="inputEmail">{{_ "City"}}</label>
+	                                <label class="control-label" for="inputEmail">{{_ "Pays"}}</label>
 	                                <div class="controls">
 	                                    <input class="text" type="text" id="pays" placeholder="">
 	                                </div>
